--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,13 @@
       "dest": "/"
     }
   ]
+
+}
+{
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
